<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fólk með hár</string>
    <string name="folkmedhar">FÓLK MEÐ HÁR</string>
    <string name="hello_world">Hello world</string>
    <string name="tilbaka">Til baka</string>
    <string name="afram">Áfram</string>
    <string name="title_activity_login">Innskráning</string>
    <string name="title_activity_register">Nýskráning</string>
    <string name="stillingar">Stillingar</string>

    <string-array name="menu_titles">
        <item>Fólk með hár</item>
        <item>Panta tíma</item>
        <item>Mínar pantanir</item>
        <item>Um stofuna</item>
        <item>Tilboð</item>
        <item>Verðlisti</item>
        <item>Skrá mig út</item>
    </string-array>

    <string name="title_activity_step1">Skref 1 af 3</string>
    <string name="panta">Panta tíma</string>
    <string name="mittSvaedi">Mínar pantanir</string>
    <string name="starfsmenn_prompt">Veldu starfsmann</string>
    <string name="skref1_info">Veldu starfsmann og hvað þú vilt láta
        gera við hárið á þér</string>

    <string-array name="starfsmenn_array">
        <item>Hver sem er</item>
        <item>Bambi</item>
        <item>Perla</item>
        <item>Oddur</item>
        <item>Magnea</item>
        <item>Eva</item>
        <item>Birkir</item>
        <item>Dagný</item>
    </string-array>

    <string name="adgerd_prompt">Veldu aðgerð</string>

    <string-array name="adgerd_array">
        <item>Dömuklipping</item>
        <item>Herraklipping</item>
        <item>Barnaklipping</item>
        <item>Heillitun</item>
        <item>Litur í rót</item>
        <item>Strípur</item>
        <item>Litun og strípur</item>
        <item>Dömuklipping og litun/strípur</item>
        <item>Herraklipping og litun/strípur</item>
        <item>Greiðsla</item>
        <item>Permanett</item>
        <item>Blástur</item>
    </string-array>

    <string name="harlengd_prompt">Veldu hárlengd</string>

    <string-array name="harlengd_array">
        <item>Stutt</item>
        <item>Millisítt</item>
        <item>Sítt</item>
    </string-array>

    <string name="title_activity_skref2">Skref 2 af 3</string>
    <string name="pick_date">Veldu dag</string>
    <string name="timi_prompt">Veldu tíma</string>
    <string name="dagur">Dagur:</string>
    <string name="timi_text">Tími:</string>
    <string name="skref2_info">Veldu úr lausum tímum starfsmanns</string>

    <string-array name="timi_array">
        <item>Veldu tíma</item>
    </string-array>

    <string name="title_activity_sidasta_pontun">Næsta pöntun</string>
    <string name="sidasta_pontun_fyrirsogn">Næsta pöntun</string>
    <string name="title_activity_mitt_svaedi">Mínar pantanir</string>
    <string name="title_activity_allar_pantanir">Allar pantanir</string>
    <string name="title_activity_um_stofuna">Um Stofuna</string>
    <string name="stadsetning">Hárgreiðslustofan Fólk með hár er staðsett á
        Brávallagötu 14, 101 Reykjavík.\n\nStofan er opin mánudaga til laugardaga frá klukkan 9 til 18.</string>
    <string name="hafa_samband">Endilega hafið samband.\n\nSími: 565-5566
        \nNetfang: folkmedhar@gmail.com</string>
    <string name="staff">Starfsfólk</string>
    <string name="title_activity_starfsfolk">Starfsfólk</string>
    <string name="allar_pantanir">Allar pantanir</string>
    <string name="sidasta_pontun">Næsta pöntun</string>
    <string name="title_activity_skref3">Skref 3 af 3</string>
    <string name="textview_Skref3_nafn">Nafn:</string>
    <string name="textview_Skref3_simi">Símanúmer:</string>
    <string name="textview_Skref3_starfsmadur">Starfsmaður:</string>
    <string name="textview_Skref3_adgerd">Aðgerð:</string>
    <string name="textview_Skref3_harlengd">Hárlengd:</string>
    <string name="textview_Skref3_dagsetning">Dagsetning:</string>
    <string name="textview_Skref3_timi">Tími:</string>
    <string name="textview_stadfestingBokunar">Staðfesting bókunar</string>
    <string name="button_Skref3_tilBaka">Til baka</string>
    <string name="button_Skref3_stadfesta">Staðfesta</string>
    <string name="title_activity_bokun">Pöntun móttekin</string>
    <string name="title_activity_tilbod">Tilboð</string>
    <string name="tilbod1">Tilboð 1: 2 fyrir 1 í klippingu</string>
    <string name="tilbod2">Tilboð 2: Ókeypis rakstur með klippingu</string>
    <string name="email">Netfang</string>
    <string name="password">Lykilorð</string>
    <string name="login">Innskráning</string>
    <string name="registerScreen">Ný/r á Fólk með hár? Smelltu hér til að nýskrá þig!</string>
    <string name="loginScreen">Nú þegar á Fólk með hár? Smelltu hér til að skrá þig inn!</string>
    <string name="nyskraning">Nýskráning</string>
    <string name="fullname">Fullt nafn</string>
    <string name="phone">Símanúmer</string>
    <string name="logout">Skrá mig út</string>
    <string name="title_activity_drasl">Drasl</string>
    <string name="title_activity_skref1">Skref1</string>
    <string name="title_activity_upphafsskjar">Fólk með hár</string>
    <string name="title_activity_update_user">Uppfæra notanda</string>
    <string name="textUpdateInfo">Notandaupplýsingar</string>
    <string name="userName">Nafn: </string>
    <string name="userEmail">Netfang: </string>
    <string name="userPhone">Símanúmer: </string>
    <string name="userOldPassword">Lykilorð: </string>
    <string name="userPassword">Nýtt lykilorð: </string>
    <string name="buttonUpdateUser">Vista</string>
    <string name="afpanta">Afpanta</string>
    <string name="title_fragment_verdlisti">Verðlisti</string>
    <string name="passwordRepeat">Staðfesta lykilorð</string>
    <string name="userPasswordRepeat">Staðfesta nýtt lykilorð: </string>
    <string name="title_activity_connection">Connection</string>
    <string name="action_settings">Settings</string>
    <string name="hintPassword">Lykilorð</string>
    <string name="hintEmail">Netfang</string>
    <string name="hintName">Fullt nafn</string>
    <string name="hintPhone">Símanúmer</string>
    <string name="hintPasswordRepeat">Staðfesta lykilorð</string>
    <string name="hintUpdatePassword">Nýtt lykilorð</string>
    <string name="hintUpdatePasswordRepeat">Staðfesta nýtt lykilorð</string>
    <string name="title_activity_calendar">CalendarActivity</string>

</resources>
