<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
    
    <TextView
        android:id="@+id/name"
        android:layout_width="150dp"
        android:layout_alignParentLeft="true"
        android:layout_height="38dp"
        android:text="@string/textview_Skref3_nafn"
        android:textSize= "20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:labelFor="@+id/nafn" />
    
    <EditText
        android:id="@+id/nafn"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/name"
        android:inputType="textPersonName"
        android:textSize="20sp" >

        <requestFocus />
    </EditText>
    	
    <TextView
        android:id="@+id/telephone"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/name"
        android:text="@string/textview_Skref3_simi" 
        android:textSize= "20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:labelFor="@+id/simi"/>
    
     <EditText
         android:id="@+id/simi"
         android:layout_width="200dp"
         android:layout_height="38dp"
         android:layout_below="@id/nafn"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/telephone"
         android:inputType="textPersonName"
         android:textSize="20sp" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/employee"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/telephone"
        android:text="@string/textview_Skref3_starfsmadur" 
        android:textSize= "20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/starfsmadur"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_below="@id/simi"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/employee"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/type"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/employee"
        android:text="@string/textview_Skref3_adgerd"
        android:textSize= "20sp" 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/adgerd"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_below="@id/starfsmadur"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/type"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/height"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/type"
        android:text="@string/textview_Skref3_harlengd"
        android:textSize= "20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/harlengd"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_below="@id/adgerd"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/height"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/height"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/textview_Skref3_dagsetning"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_below="@id/harlengd"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/date_label"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/time_label"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/date_label"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/textview_Skref3_timi"
        android:textSize="20sp" />

    <Button
        android:id="@+id/til_Baka"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/time_label"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="21dp"
        android:text="@string/button_Skref3_tilBaka"
        android:textSize="20sp"
        android:background="@color/buttoncolor"
        android:textColor="@color/buttonFontColor"
        android:padding="10dp" />

    <Button
        android:id="@+id/panta"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignBaseline="@+id/til_Baka"
        android:layout_alignBottom="@+id/til_Baka"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:onClick="stadfesta"
        android:text="@string/button_Skref3_stadfesta"
        android:textSize="20sp"
        android:background="@color/buttoncolor"
        android:textColor="@color/buttonFontColor"
        android:padding="10dp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_alignBaseline="@+id/time_label"
        android:layout_alignBottom="@+id/time_label"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/time_label"
        android:textSize="20sp" />

</RelativeLayout>
