<?xml version="1.0" encoding="UTF-8"?>




<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="160dp"
    tools:context="com.example.folkmedhar.pantanir.bokun.Skref2" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/dagur"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="3dp"
                android:text="@string/dagur"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:width="120dp" />

            <Button
                android:id="@+id/buttonDagur"
                style="@style/buttonStyle"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:drawableRight="@drawable/calendar64"
                android:gravity="left|center_vertical"
                android:onClick="showDatePickerDialog"
                android:text="@string/pick_date"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/timi_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/timi_text"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/timi"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/test_button_background"
                android:entries="@array/timi_array"
                android:prompt="@string/timi_prompt"
                android:spinnerMode="dialog" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/afram2"
        style="@style/buttonStyleAfram"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="30dp"
        android:drawableRight="@drawable/next32"
        android:text="@string/afram" />

</RelativeLayout>