<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="@dimen/fragment_padding_top">

    <TextView
        android:id="@+id/telephone"
        style="@style/textviewStyle"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/name"
        android:layout_marginTop="10dp"
        android:labelFor="@+id/simi"
        android:text="@string/textview_Skref3_simi"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/simi"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_below="@+id/nafn"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/telephone"
        android:inputType="textPersonName"
        android:textColor="@color/black" >

    </EditText>

    <TextView
        android:id="@+id/employee"
        style="@style/textviewStyle"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/telephone"
        android:layout_marginTop="10dp"
        android:text="@string/textview_Skref3_starfsmadur"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/starfsmadur"
        style="@style/textviewStyle"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_below="@id/simi"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/employee"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/type"
        style="@style/textviewStyle"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/employee"
        android:layout_marginTop="10dp"
        android:text="@string/textview_Skref3_adgerd"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/adgerd"
        style="@style/textviewStyle"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_below="@id/starfsmadur"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/type"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/height"
        style="@style/textviewStyle"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/type"
        android:layout_marginTop="10dp"
        android:text="@string/textview_Skref3_harlengd"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/harlengd"
        style="@style/textviewStyle"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_below="@id/adgerd"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/height"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/date_label"
        style="@style/textviewStyle"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/height"
        android:layout_marginTop="10dp"
        android:text="@string/textview_Skref3_dagsetning"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/date"
        style="@style/textviewStyle"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_below="@id/harlengd"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/date_label"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/time_label"
        style="@style/textviewStyle"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/date_label"
        android:layout_marginTop="10dp"
        android:text="@string/textview_Skref3_timi"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/time"
        style="@style/textviewStyle"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_alignBaseline="@+id/time_label"
        android:layout_alignBottom="@+id/time_label"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/time_label"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/name"
        style="@style/textviewStyle"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:layout_toLeftOf="@+id/simi"
        android:labelFor="@+id/nafn"
        android:text="@string/textview_Skref3_nafn"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/nafn"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_above="@+id/telephone"
        android:layout_alignLeft="@+id/simi"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black" >

    </EditText>

    <TextView
        android:id="@+id/stadfestingBokunar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_alignRight="@+id/nafn"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:padding="15dp"
        android:paddingBottom="30dp"
        android:paddingTop="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"       
        android:text="@string/textview_stadfestingBokunar"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <Button
        android:id="@+id/panta"
        style="@style/buttonStyle"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/time_label"
        android:layout_alignRight="@+id/time"
        android:layout_below="@+id/time_label"
        android:background="@color/login_button_background"
        android:onClick="stadfesta"
        android:layout_marginTop="20dp"
        android:text="@string/button_Skref3_stadfesta"
        android:textColor="@color/white" />

</RelativeLayout>